--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Debt Snowball Calculator v4.3.0</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Debt Snowball Calculator v5 - GitHub</title>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <div class="container">
   <header>
-    <h1>Debt Snowball Calculator v4.3.0</h1>
+    <h1>Debt Snowball Calculator v5</h1>
     <p class="subtitle">Vertex42 - Accurate 0 Promo Minimum Priority Full Math Explanation</p>
   </header>
 
@@ -53,10 +53,14 @@
         </div>
       </div>
     </div>
+
     <div class="card">
       <h2>Amortization Schedule</h2>
-      <table id="scheduleTable"></table>
+      <table id="scheduleTable">
+        <!-- schedule table content dynamically inserted -->
+      </table>
     </div>
+
     <div class="card">
       <h2>Math Details</h2>
       <pre id="mathDetails"></pre>
