--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Debt Snowball Calculator v5 - GitHub</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>God Mode Debt Snowball — Jake</title>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <div class="container">
   <header>
-    <h1>Debt Snowball Calculator v5</h1>
-    <p class="subtitle">Vertex42 - Accurate 0 Promo Minimum Priority Full Math Explanation</p>
+    <h1>God Mode Debt Snowball</h1>
+    <p class="subtitle">Jake — Personalized, GitHub Pages compatible • Min-first + 0% APR priority</p>
   </header>
 
   <div class="card">
-    <h2>Monthly Budget</h2>
-    <div class="form-group">
+    <h2>Settings</h2>
+    <div class="form-row">
       <label for="monthlyBudget">Total Monthly Payment Available</label>
       <input type="number" id="monthlyBudget" value="701" step="0.01" />
+    </div>
+
+    <div class="form-row">
+      <label for="strategy">Snowball Strategy</label>
+      <select id="strategy">
+        <option value="balance">Standard Snowball (smallest balance first)</option>
+        <option value="zero-first">0% APR First (lowest min first) → then snowball</option>
+      </select>
+    </div>
+
+    <div class="form-row">
+      <button class="btn btn-primary" id="saveBtn">Save To Local</button>
+      <button class="btn" id="loadBtn">Load Saved</button>
+      <button class="btn btn-secondary" id="resetBtn">Reset Defaults</button>
     </div>
   </div>
 
   <div class="card">
-    <h2>Your Debt</h2>
+    <h2>Your Debts</h2>
+    <p class="muted">Edit balances, APRs, and minimums. Add or remove debts as needed.</p>
     <div id="debtList"></div>
-    <button class="btn btn-secondary" id="addDebt">Add Debt</button>
+    <div class="form-row">
+      <button class="btn btn-secondary" id="addDebt">Add Debt</button>
+    </div>
   </div>
 
   <div class="card">
     <button class="btn btn-primary" id="calculateBtn">Calculate Snowball Plan</button>
+    <button class="btn" id="downloadCsv">Download Schedule CSV</button>
   </div>
 
   <div id="results" class="hidden">
@@ -36,8 +54,8 @@
       <h2>Summary</h2>
       <div class="stats-grid">
         <div class="stat-card">
-          <div>Total Debt</div>
-          <div id="totalDebt">0</div>
+          <div>Total Remaining Debt</div>
+          <div id="totalDebt">0.00</div>
         </div>
         <div class="stat-card">
           <div>Payoff Time</div>
@@ -45,20 +63,20 @@
         </div>
         <div class="stat-card">
           <div>Total Interest</div>
-          <div id="totalInterest">0</div>
+          <div id="totalInterest">0.00</div>
         </div>
         <div class="stat-card">
           <div>Total Paid</div>
-          <div id="totalPaid">0</div>
+          <div id="totalPaid">0.00</div>
         </div>
       </div>
     </div>
 
     <div class="card">
       <h2>Amortization Schedule</h2>
-      <table id="scheduleTable">
-        <!-- schedule table content dynamically inserted -->
-      </table>
+      <div class="table-wrap">
+        <table id="scheduleTable"></table>
+      </div>
     </div>
 
     <div class="card">
@@ -66,6 +84,8 @@
       <pre id="mathDetails"></pre>
     </div>
   </div>
+
+  <footer class="muted">Static — works on GitHub Pages — Made for Jake</footer>
 </div>
 
 <script src="script.js"></script>
